fix: fixed alignment isuue of share button and image credit

--- a/src/components/detailsModal/eventDetailsModal.css
+++ b/src/components/detailsModal/eventDetailsModal.css
@@ -22,10 +22,11 @@
   transition:
     all 0.4s ease-in-out,
     opacity 0.3s ease-in-out;
+  padding-right: 8px;
 }
 
-#calendar-widget .calendar-widget-details-modal .image-description-display-icon-wrapper svg {
-  padding-right: 8px;
+#calendar-widget .calendar-widget-details-modal .image-description-display-icon-wrapper {
+  width: fit-content;
 }
 
 #calendar-widget .calendar-widget-details-modal .image-description-info-icon {
